<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:contentDescription="@string/plus"
        android:src="@drawable/kvacica" />

    <TextView
        android:id="@+id/txtNaziv"
        android:layout_width="104dp"
        android:layout_height="30dp"
        android:gravity="center"
        android:text="@string/txtNaziv"
        android:textSize="16sp" />
    
    <TextView
        android:id="@+id/txtKategorija"
        android:layout_width="94dp"
        android:layout_height="30dp"
        android:gravity="center"
        android:text="@string/kategorija"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/txtIznos"
        android:layout_width="86dp"
        android:layout_height="30dp"
        android:gravity="end"
        android:text="@string/txtIznos"
        android:textSize="16sp" />

</LinearLayout>
