<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="@android:color/holo_blue_bright"
     >

    <TextView
        android:id="@+id/textValuta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dip"
        android:textSize="14sp"
        android:textStyle="bold"
        android:text="@string/valuta" />

    <TextView
        android:id="@+id/textKupovni"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dip"     
        android:textSize="14sp"
        android:textStyle="bold"
        android:text="@string/kupovni" />

    <TextView
        android:id="@+id/textSrednji"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dip"
        android:textSize="14sp"
        android:textStyle="bold"
        android:text="@string/srednji" />

    <TextView
        android:id="@+id/textProdajni"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dip"
        android:textSize="14sp"
        android:textStyle="bold"
        android:text="@string/prodajni" />

</LinearLayout>
