<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:background="@drawable/background2" >

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true" >

        <RadioButton
            android:id="@+id/radioHR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hrvatski"
            android:checked="true" />

        <RadioButton
            android:id="@+id/radioENG"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/engleski" />
         
    </RadioGroup>

     <TextView
         android:id="@+id/txtLozinka"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/txtDobrodosli"
         android:layout_marginTop="15dp"
         android:text="@string/lozinkaUnos" />
     
     <TextView
         android:id="@+id/txtDobrodosli"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/radioGroup1"
         android:layout_centerHorizontal="true"
         android:textSize="18sp"
         android:fontFamily="sans-serif"
         android:text="@string/dobrodosli" />

     <EditText
         android:id="@+id/etPotvrda"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/txtLozinka"
         android:layout_below="@+id/txtLozinka"
         android:ems="10"
         android:hint="@string/lozinkaHint"
         android:inputType="textPassword" />

     <TextView
         android:id="@+id/txtPotvrda"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/etPotvrda"
         android:layout_below="@+id/etPotvrda"
         android:text="@string/lozinkaPotvrda" />

     <EditText
         android:id="@+id/etLozinka"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/txtPotvrda"
         android:layout_toLeftOf="@+id/radioGroup1"
         android:ems="10"
         android:hint="@string/lozinkaHint"
         android:inputType="textPassword" >

         <requestFocus />
     </EditText>

     <TextView
         android:id="@+id/txtPitanje"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/txtPotvrda"
         android:layout_centerVertical="true"
         android:text="@string/sigurnosnoPitanje" />

     <TextView
         android:id="@+id/txtOdgovor"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/txtPitanje"
         android:layout_below="@+id/txtPitanje"
         android:layout_marginTop="34dp"
         android:text="@string/odgovor" />

     <EditText
         android:id="@+id/etOdgovor"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/etLozinka"
         android:layout_below="@+id/txtOdgovor"
         android:ems="10"
         android:inputType="text" />

     <ImageButton
         android:id="@+id/btnPrijava"
         android:layout_width="120dp"
         android:layout_height="30dp"
         android:layout_below="@+id/etOdgovor"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="32dp"
         android:src="@drawable/puce" />

     <Spinner
         android:id="@+id/spinPitanje"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignTop="@+id/txtPitanje"
         android:layout_toRightOf="@+id/btnPrijava" 
         android:entries="@array/pitanje"/>
         />

</RelativeLayout>
