<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_bright"
    android:orientation="horizontal" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginRight="15dp"
        android:contentDescription="@string/plus"
        android:src="@drawable/plus" />
    
    <TextView
        android:id="@+id/txtNaziv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.30"
        android:text="@string/txtNaziv"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/txtIznos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_weight="0.30"
        android:gravity="right"
        android:text="@string/txtIznos"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</LinearLayout>