<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RegistracijaActivity" >

    <TextView
        android:id="@+id/txtLozinka"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/txtDobrodosli"
        android:layout_marginTop="24dp"
        android:text="@string/lozinkaUnos" />

    <EditText
        android:id="@+id/etLozinka1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtLozinka"
        android:layout_below="@+id/txtLozinka"
        android:layout_marginTop="18dp"
        android:ems="10"
        android:hint="@string/lozinkaHint"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/txtDobrodosli"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="94dp"
        android:fontFamily="sans-serif"
        android:text="@string/dobrodosli"
        android:textSize="18sp" />

    <ImageButton
        android:id="@+id/imgBtnRegistracija"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_above="@+id/txtZaboravljena"
        android:layout_alignRight="@+id/etLozinka1"
        android:layout_marginBottom="34dp"
        android:layout_marginRight="21dp"
        android:background="@drawable/registracija"
        android:contentDescription="@string/btnLogin" />

    <TextView
        android:id="@+id/txtZaboravljena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="94dp"
        android:text="@string/zaboravljena" />

    <ImageButton
        android:id="@+id/imgBtnPrijava"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/etLozinka1"
        android:layout_alignTop="@+id/imgBtnRegistracija"
        android:background="@drawable/prijava"
        android:contentDescription="@string/btnLogin" />

</RelativeLayout>